--- a/style.css
+++ b/style.css
@@ -96,3 +96,41 @@ main {
     transition: all 0.5s;
     transform: scale(1.05);
 }
+
+/* column of news */
+
+.container2 {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15%;
+
+    display: flex;
+    flex-direction: column;
+
+    width: 65%;
+}
+
+.item {
+
+    display: flex;
+    align-items: center;
+
+    padding: 10px;
+
+    border-top: rgba(128, 128, 128, 0.3) 1px solid;
+    border-bottom: rgba(128, 128, 128, 0.3) 1px solid;
+}
+
+.item h2:hover {
+    transition: all 0.3s;
+    color: rgba(255, 0, 0, 0.9);
+}
+
+.news {
+    width: 40%;
+    height: 40%;
+
+    border-radius: 3px;
+
+    margin-right: 10px;
+}
