--- a/style.css
+++ b/style.css
@@ -11,10 +11,7 @@ html, body {
     font-family: 'Open Sans', sans-serif;
 }
 
-.main-container {
-    width: 100%;
-    height: 100%;
-}
+
 
 header {
     background:rgb(231, 226, 226);
@@ -29,22 +26,35 @@ header {
 
 /* main */
 
-main {
+.main-container {
     width: 100%;
     height: 100%;
 }
 
-.container1 {
-    width: 90vw;
-    height: 50vh;
+main {
+    width: 100%;
+    height: 100%;
 
-    margin: auto;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 50% 50%;
+    grid-template-areas: "m m"
+                         "s a";
+}
+
+.container1 {
+    width: 80vw;
+    height: 20vh;
+
     margin-top: 5%;
     
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     grid-gap: 10px;
+    grid-area: m;
+    justify-self: center;
+    
 }
 
 .container1 h2 {
@@ -52,7 +62,7 @@ main {
 }
 
 .principal {
-    grid-area: 1 / 1 / 3 / 1;
+    grid-area: 1 / 1 / 1 / 3;
     height: 100%;
     width: 100%;
     background-color: #fff;
@@ -89,25 +99,25 @@ main {
 
 .p-img1:hover {
     transition: all 0.5s;
-    transform: scale(1.05);
+    transform: scale(1.03);
 }
 
 .p-img2:hover {
     transition: all 0.5s;
-    transform: scale(1.05);
+    transform: scale(1.03);
 }
 
 /* column of news */
 
 .container2 {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 15%;
+    margin-top: 0;
 
     display: flex;
     flex-direction: column;
 
-    width: 65%;
+    width: 100%;
+
+    grid-area: s;
 }
 
 .item {
@@ -115,8 +125,11 @@ main {
     display: flex;
     align-items: center;
 
-    padding: 10px;
+    padding: 20px;
 
+}
+
+.gray-border {
     border-top: rgba(128, 128, 128, 0.3) 1px solid;
     border-bottom: rgba(128, 128, 128, 0.3) 1px solid;
 }
@@ -128,9 +141,21 @@ main {
 
 .news {
     width: 40%;
-    height: 40%;
+    height: 100%;
 
     border-radius: 3px;
 
     margin-right: 10px;
+}
+
+/* aside */
+
+.aside {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    grid-area: a;
+
+    width: 100%;
 }
