--- a/style.css
+++ b/style.css
@@ -110,7 +110,6 @@ main {
 /* column of news */
 
 .container2 {
-    margin-top: 0;
 
     display: flex;
     flex-direction: column;
@@ -158,4 +157,24 @@ main {
     grid-area: a;
 
     width: 100%;
+}
+
+/* footer */
+
+footer {
+    margin-top: 45%;
+    text-align: center;
+    background-color: rgba(128, 128, 128, 0.5);
+    padding: 40px 0;
+}
+
+footer h2 a {
+    text-decoration: none;
+    color: red;
+}
+
+footer h2 a:hover {
+    transition: all 0.3s;
+    font-size: 1.5em;
+    color: purple;
 }
